# api/app/validators/pagamento.ts
@@ -1,0 +1,7 @@
+import vine from '@vinejs/vine'
+
+import { METODOS_PAGAMENTO_EXTERNO } from '#models/pagamento'
+
+export const solicitarPagamentoValidator = vine.create({
+  metodo: vine.enum(METODOS_PAGAMENTO_EXTERNO),
+})
